[?]
- Add rotation gesture
- Can now specify config file to use